--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-flip-numbers": "^3.0.8",
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
